fix: set .buttons to wrap to fix overflowing when there are many buttons side by side

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -2,6 +2,10 @@ html {
   scroll-behavior: smooth;
 }
 
+.buttons {
+  flex-wrap: wrap;
+}
+
 .vp-doc div[class*='language-'] {
   margin-left: 0;
   margin-right: 0;
